# uv-up

./: .gitignore  .releaserc  CHANGELOG.md  Cargo.toml  README.md  index.tsx  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  publish.yml  release.yml
bench/fixtures/many-projects-shared/app01/: pyproject.toml
bench/fixtures/many-projects-shared/app02/: pyproject.toml
bench/fixtures/many-projects-shared/app03/: pyproject.toml
bench/fixtures/many-projects-shared/app04/: pyproject.toml
bench/fixtures/many-projects-shared/app05/: pyproject.toml
bench/fixtures/many-projects-shared/app06/: pyproject.toml
bench/fixtures/many-projects-shared/app07/: pyproject.toml
bench/fixtures/many-projects-shared/app08/: pyproject.toml
bench/fixtures/many-projects-shared/app09/: pyproject.toml
bench/fixtures/many-projects-shared/app10/: pyproject.toml
bench/fixtures/many-projects-unique/app01/: pyproject.toml
bench/fixtures/many-projects-unique/app02/: pyproject.toml
bench/fixtures/many-projects-unique/app03/: pyproject.toml
bench/fixtures/many-projects-unique/app04/: pyproject.toml
bench/fixtures/many-projects-unique/app05/: pyproject.toml
bench/fixtures/many-projects-unique/app06/: pyproject.toml
bench/fixtures/many-projects-unique/app07/: pyproject.toml
bench/fixtures/many-projects-unique/app08/: pyproject.toml
bench/fixtures/many-projects-unique/app09/: pyproject.toml
bench/fixtures/many-projects-unique/app10/: pyproject.toml
examples/: pyproject.toml
src/: main.rs  model.rs  pypi.rs  pyproject.rs  tui.rs
