[package]
name = "uv-up"
version = "1.1.0"
edition = "2024"
description = "Interactive dependency updater for uv projects"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
pep440_rs = "0.7.3"
pep508_rs = "0.9.2"
ratatui = "0.30.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
toml_edit = "0.25.4"
walkdir = "2.5.0"
