[package]
name = "uvlift"
version = "1.1.6"
edition = "2024"
description = "Interactive dependency updater for uv projects"
license = "MIT"
authors = ["Ayaan Zaidi <hi@obviy.us>"]
readme = "README.md"
repository = "https://github.com/obviyus/uvlift"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
pep440_rs = "0.7.3"
pep508_rs = "0.9.2"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
toml_edit = "0.25.4"
ureq = { version = "3.2.0", default-features = false, features = ["json", "rustls"] }
walkdir = "2.5.0"
