[project]
name = "superseriousbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=2.9.5",
    "aiosqlite>=0.17.0",
    "async-lru>=2.0.4",
    "asyncpraw>=7.8.0",
    "beautifulsoup4>=4.11.2",
    "caribou>=0.4.1",
    "coloredlogs>=15.0.1",
    "dateparser>=1.1.8",
    "deep-translator>=1.11.4",
    "geopy>=2.4.1",
    "howlongtobeatpy>=1.0.11",
    "ijson>=3.3.0",
    "litellm>=1.40.14",
    "networkx>=2.8.8",
    "pydantic>=1.10.19",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=20.8",
    "pyvis>=0.3.2",
    "redis>=4.6.0",
    "requests>=2.31.0",
    "spurdify>=0.3.0",
    "translatepy>=2.3",
    "uwuify>=1.3.1",
    "yt-dlp>=2024.8.6",
]

[tool.uv.sources]
