[project]
name = "shared-bench-app01"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.5",
    "aiosqlite>=0.17.0",
    "async-lru>=2.0.4",
    "beautifulsoup4>=4.11.2",
    "httpx>=0.27.0",
    "pydantic>=1.10.19",
    "redis>=4.6.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "typer>=0.12.3",
]
