[project]
name = "shared-bench-app02"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.5",
    "async-lru>=2.0.4",
    "beautifulsoup4>=4.11.2",
    "httpx>=0.27.0",
    "orjson>=3.10.6",
    "pydantic>=1.10.19",
    "python-dotenv>=1.1.1",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "tenacity>=8.4.2",
]
