[project]
name = "shared-bench-app03"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.5",
    "async-lru>=2.0.4",
    "jinja2>=3.1.4",
    "httpx>=0.27.0",
    "pydantic>=1.10.19",
    "requests-cache>=1.2.1",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.31",
    "structlog>=24.2.0",
]
