[project]
name = "shared-bench-app05"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.5",
    "aiosqlite>=0.17.0",
    "async-lru>=2.0.4",
    "click>=8.1.7",
    "httpx>=0.27.0",
    "humanize>=4.9.0",
    "packaging>=24.1",
    "pydantic>=1.10.19",
    "requests>=2.31.0",
    "rich>=13.7.0",
]
