[project]
name = "shared-bench-app06"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.5",
    "async-lru>=2.0.4",
    "beautifulsoup4>=4.11.2",
    "httpx>=0.27.0",
    "markdown-it-py>=3.0.0",
    "pydantic>=1.10.19",
    "pygments>=2.18.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "rich>=13.7.0",
]
