[project]
name = "shared-bench-app08"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.5",
    "async-lru>=2.0.4",
    "beautifulsoup4>=4.11.2",
    "lxml>=5.2.2",
    "msgspec>=0.18.6",
    "httpx>=0.27.0",
    "pydantic>=1.10.19",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "tomli>=2.0.1",
]
