[project]
name = "shared-bench-app10"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.5",
    "aiosqlite>=0.17.0",
    "async-lru>=2.0.4",
    "boto3>=1.34.145",
    "botocore>=1.34.145",
    "httpx>=0.27.0",
    "pydantic>=1.10.19",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "s3transfer>=0.10.2",
    "typer>=0.12.3",
]
